# Ferrobase

./: .gitignore  Ferrobase_PRD_v1.0.docx  Ferrobase_功能清单_全功能版.md  QUICKSTART.md  README.md  build.sh  icon-preview.html  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: connection.rs  export.rs  mod.rs  mongo.rs  query.rs  redis_cmd.rs  schema.rs
src-tauri/src/db/: mod.rs  mongodb_driver.rs  mysql.rs  postgres.rs  redis_driver.rs  sqlite.rs
src-tauri/src/models/: mod.rs
src-tauri/src/pool/: mod.rs
src/api/: connection.ts  index.ts  mongo.ts  query.ts  redis.ts  schema.ts
src/components/: AboutDialog.tsx  ConfirmDialog.tsx  ContextMenu.tsx  MainArea.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  TitleBar.tsx  WelcomeScreen.tsx
src/components/ConnectionPanel/: ConnectionDialog.tsx
src/components/DatabaseTree/: index.tsx
src/components/QueryEditor/: QueryEditorTab.tsx  SqlEditor.tsx  sqlCompletionProvider.ts
src/components/RedisViewer/: RedisKeyViewer.tsx
src/components/ResultGrid/: CellDetail.tsx  QueryHistory.tsx  ResultGrid.tsx  ResultPanel.tsx
src/components/Settings/: SettingsPanel.tsx
src/components/TableView/: AddColumnDialog.tsx  AddIndexDialog.tsx  EditableDataGrid.tsx  JsonEditorDialog.tsx  RecordView.tsx  TableViewTab.tsx  mongoValue.ts
src/components/icons/: DbIcons.tsx
src/lib/: utils.ts
src/stores/: connectionStore.ts  index.ts  settingsStore.ts  tabStore.ts  themeStore.ts
src/styles/: globals.css
src/types/: index.ts
