[package]
name = "ferrobase"
version = "0.1.0"
description = "Ferrobase - Lightweight Cross-Platform Database Client"
authors = ["Ferrobase Contributors"]
license = "Apache-2.0"
repository = "https://github.com/derekzhan/Ferrobase"
default-run = "ferrobase"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "ferrobase_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ferrobase"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
keyring = "2"
base64 = "0.22"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database drivers
sqlx = { version = "0.8", features = [
  "runtime-tokio-native-tls",
  "mysql",
  "postgres",
  "sqlite",
  "chrono",
  "uuid",
  "json",
  "bigdecimal",
] }
bigdecimal = "0.4"

# MongoDB
mongodb = "3"
bson = { version = "2", features = ["chrono-0_4"] }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Async utilities
futures = "0.3"

# SSH tunneling
russh = { version = "0.44", optional = true }
russh-keys = { version = "0.44", optional = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
ssh-tunnel = ["russh", "russh-keys"]

# Dev builds: fast compile, no optimizations
[profile.dev]
opt-level = 0

# Release builds: full optimization for distribution
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
